# Boggle

./: .gitignore  README  README.md  boggle.ml  boggle.opam  build.sh  dictionary.ml  dune  dune-project  esy.json  main.ml  send.ml  server.ml  start.sh
lib/client/: client.ml  client.mli  dune
lib/dictionary/: dictionary.ml  dictionary.mli  dune
lib/game/: dune  game.ml  game.mli
lib/letter/: dune  letter.ml  letter.mli
lib/parameters/: dune  parameters.ml  parameters.mli
lib/send/: dune  send.ml  send.mli
src/: boggle.js  game.js  input.js  main.html  path.js  print.js  regles.html  solutions.js  style.css  var.js
test/: test.ml
